--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input
               id="puja_name_bengali"
               type="text"
-              placeholder="পুজোর নাম লিখুন"
+              placeholder="পুজোর নাম বাংলাতে লিখুন"
               required
             />
             <label for="puja_name_bengali" class="required">পুজোর নাম</label>
@@ -324,6 +324,71 @@
             />
             <label for="contact_phone_3" class="required"
               >Contact Phone Number 3</label
+            >
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_name"
+              type="text"
+              placeholder="Enter Your Puja Theme Name"
+              required
+              pattern="[A-Za-z\s]+"
+            />
+            <label for="theme_name" class="required">THEME NAME</label>
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_name_bengali"
+              type="text"
+              placeholder="পুজোর থিমের নাম বাংলাতে লিখুন"
+              required
+            />
+            <label for="theme_name_bengali" class="required"
+              >পুজোর থিমের নাম</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_details"
+              type="text"
+              placeholder="Describe Your Puja Theme Details In Short / Type NA to skip"
+            />
+            <label for="theme_details">THEME DETAILS</label>
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_details_bengali"
+              type="text"
+              placeholder="পুজোর থিমের বিষয় বাংলাতে সংক্ষেপে বর্ণনা করুন / অথবা 'NA' টাইপ করুন"
+            />
+            <label for="theme_details_bengali">পুজোর থিমের বিষয়</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="budget"
+              type="text"
+              placeholder="Mention Your Puja Budget Of This Year"
+              required
+            />
+            <label for="budget" class="required">BUDGET</label>
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="materials_used"
+              type="text"
+              placeholder="Write Names Of Materials Separate By Commas."
+              required
+            />
+            <label for="materials_used" class="required"
+              >MATERIALS USED IN THE PUJA MANDOOP</label
             >
           </div>
         </div>
