--- a/index.html
+++ b/index.html
@@ -392,6 +392,150 @@
             >
           </div>
         </div>
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input id="khuti_puja_date" type="date" required />
+            <label for="khuti_puja_date" class="required"
+              >KHUTI PUJA DATE</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input id="opening_ceremony_date" type="date" required />
+            <label for="opening_ceremony_date" class="required"
+              >OPENING CEREMONY DATE</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="presidents_name"
+              type="text"
+              placeholder="Enter Your President's Name"
+              required
+            />
+            <label for="presidents_name" class="required"
+              >PRESIDENT'S NAME</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="presidents_phone"
+              type="tel"
+              placeholder="Enter Your President's Phone Number"
+              required
+              pattern="\d{10}"
+            />
+            <label for="presidents_phone" class="required"
+              >PRESIDENT'S PHONE NO</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_artists_name"
+              type="text"
+              placeholder="Enter Your Theme Artist's Name"
+              required
+            />
+            <label for="theme_artists_name" class="required"
+              >THEME ARTIST'S NAME</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="theme_artists_phone"
+              type="tel"
+              placeholder="Enter Your Theme Artist's Phone Number"
+              required
+              pattern="\d{10}"
+            />
+            <label for="theme_artists_phone" class="required"
+              >THEME ARTIST'S PHONE NO</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="light_artists_name"
+              type="text"
+              placeholder="Enter Your Light Artist's Name"
+              required
+            />
+            <label for="light_artists_name" class="required"
+              >LIGHT ARTIST'S NAME</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="light_artists_phone"
+              type="tel"
+              placeholder="Enter Your Light Artist's Phone Number"
+              required
+              pattern="\d{10}"
+            />
+            <label for="light_artists_phone" class="required"
+              >LIGHT ARTIST'S PHONE NO</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="music_artists_name"
+              type="text"
+              placeholder="Enter Your Music Artist's Name"
+              required
+            />
+            <label for="music_artists_name" class="required"
+              >MUSIC ARTIST'S NAME</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="music_artists_phone"
+              type="tel"
+              placeholder="Enter Your Music Artist's Phone Number"
+              required
+              pattern="\d{10}"
+            />
+            <label for="music_artists_phone" class="required"
+              >MUSIC ARTIST'S PHONE NO</label
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              id="decorator_name"
+              type="text"
+              placeholder="Enter Your Decorator's Name"
+              required
+            />
+            <label for="decorator_name" class="required"
+              >DECORATOR'S NAME</label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              id="decorator_phone"
+              type="tel"
+              placeholder="Enter Your Decorator's Phone Number"
+              required
+              pattern="\d{10}"
+            />
+            <label for="decorator_phone" class="required"
+              >DECORATOR'S PHONE NO</label
+            >
+          </div>
+        </div>
         <button class="btn waves-effect waves-light" type="submit">
           Submit
         </button>
