--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input
               id="puja_name_bengali"
               type="text"
-              placeholder="পুজোর নাম বাংলাতে লিখুন "
+              placeholder="পুজোর নাম বাংলাতে লিখুন / অথবা 'NA' টাইপ করুন"
             />
             <label for="puja_name_bengali">পুজোর নাম</label>
           </div>
